--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
         <style>
         body {
-            background-color: beige
+            background-color: red
         }
     </style>
 </head>
@@ -17,3 +17,4 @@
 </body>
 
 </html>
+
