--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cambio Climatico</title>
         <style>
         body {
-            background-color: red
+            background-color: beige
         }
     </style>
 </head>
 <body>
-    <h1>Hello</h1>
-    <h2>How are you?</h2>
-    <h2>Fine thank you, and you?</h2>
+    <h1>El Cambio Climatico Provocado por el Hombre</h1>
+    <h2>¿Qué es?</h2>
+    <h2>Consecuencias</h2>
+    <h2>Soluciénes</h2>
 </body>
 
 </html>
+
 
