--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <h1>El Cambio Climatico Provocado por el Hombre</h1>
     <h2>¿Qué es?</h2>
     <h2>Consecuencias</h2>
-    <h2>Soluciénes</h2>
+    <h2>Soluciónes</h2>
 </body>
 
 </html>
+
 
 
