--- a/index.html
+++ b/index.html
@@ -12,16 +12,26 @@
 </head>
 <body>
     <h1>El Cambio Climatico Provocado por el Hombre</h1>
-    Se define como la variación en el estado del sistema climático terrestre, formado por la atmósfera, la hidrosfera, la criosfera, la litosfera y la biosfera, que perdura durante periodos de tiempo suficientemente largos (décadas o más tiempo) hasta alcanzar un nuevo equilibrio. Puede afectar tanto a los valores medios meteorológicos como a su variabilidad y extremos.
-    <br><br>
-Los cambios climáticos han existido desde el inicio de la historia de la Tierra, han sido graduales o abruptos y se han debido a causas diversas, como las relacionadas con los cambios en los parámetros orbitales, variaciones de la radiación solar, la deriva continental, periodos de vulcanismo intenso, procesos bióticos o impactos de meteoritos. El cambio climático actual es antropogénico y se relaciona principalmente con la intensificación del efecto invernadero debido a las emisiones industriales procedentes de la quema de combustibles fósiles.
-    <br><br>
+        <br><br>
     <h2>¿Qué es?</h2>
+      Se define como la variación en el estado del sistema climático terrestre, formado por la atmósfera, la hidrosfera, la criosfera, la litosfera y la biosfera, que perdura durante periodos de tiempo suficientemente largos (décadas o más tiempo) hasta alcanzar un nuevo equilibrio. Puede afectar tanto a los valores medios meteorológicos como a su variabilidad y extremos.
+        <br><br>
+Los cambios climáticos han existido desde el inicio de la historia de la Tierra, han sido graduales o abruptos y se han debido a causas diversas, como las relacionadas con los cambios en los parámetros orbitales, variaciones de la radiación solar, la deriva continental, periodos de vulcanismo intenso, procesos bióticos o impactos de meteoritos. El cambio climático actual es antropogénico y se relaciona principalmente con la intensificación del efecto invernadero debido a las emisiones industriales procedentes de la quema de combustibles fósiles. A esto tambien se le conoce como Calentamiento Global.
+        <br><br>
+        <br><br>
+    En climatología, el calentamiento global es el aumento a largo plazo de la temperatura atmosférica media del sistema climático de la Tierra debido a la intensificación del efecto invernadero. Es un aspecto primordial del cambio climático actual, demostrado por la medición directa de la temperatura, el registro de temperaturas del último milenio y de varios efectos del calentamiento global ya visibles. La paleoclimatología muestra que ha habido variaciones históricas en el clima de la Tierra, pero las que están ocurriendo actualmente lo están haciendo a un ritmo sin precedentes que no puede ser explicado por causa natural alguna, por lo que, según la evidencia científica del calentamiento global, este drástico cambio solo puede deberse a la desmedida actividad humana de los últimos tiempos, la cual es una de las principales causas del calentamiento global.
+        <br><br>
+    En 2013, el Quinto Informe de Evaluación (AR5) del Grupo Intergubernamental de Expertos sobre el Cambio Climático (IPCC) concluyó que «es extremadamente probable que la influencia humana ha sido la causa dominante del calentamiento observado desde la mitad del siglo XX». La mayor influencia humana ha sido la emisión de gases de efecto invernadero como el dióxido de carbono, metano y óxidos de nitrógeno. Las proyecciones de modelos climáticos resumidos en el AR5 indicaron que durante el presente siglo la temperatura superficial global subirá probablemente 0.3 a 1.7 °C para su escenario de emisiones más bajas usando mitigación estricta y 2.6 a 4.8 °C para las mayores.​ Estas conclusiones han sido respaldadas por las academias nacionales de ciencia de los principales países industrializados y no son disputadas por ninguna organización científica de prestigio nacional o internacional.
+        <br><br>
     <h2>Consecuencias</h2>
+        <br><br>
     <h2>Soluciónes</h2>
+        <br><br>
+    Las posibles respuestas al calentamiento global incluyen la mitigación mediante la reducción de las emisiones, la adaptación a sus efectos, la construcción de sistemas resilientes a sus impactos y una posible ingeniería climática futura. La mayoría de los países son parte de la Convención Marco de las Naciones Unidas sobre el Cambio Climático (CMNUCC),[23]​ cuyo objetivo último es prevenir un cambio climático antrópico peligroso.[24]​ La CMNUCC ha adoptado una serie de políticas destinadas a reducir las emisiones de gases de efecto invernadero[25]​[26]​[27]​[28]​ y ayudar en la adaptación al calentamiento global.[25]​[28]​[29]​[30]​ Los miembros de la CMNUCC han acordado que se requieren grandes reducciones en las emisiones[31]​ y que el calentamiento global futuro debe limitarse muy por debajo de 2.0 °C con respecto al nivel preindustrial[32]​ con esfuerzos para limitarlo a 1.5 °C.[33]​[34]​
 </body>
 
 </html>
+
 
 
 
