--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ Hay un aumento notable en la actividad de los ciclones tropicales en el Norte de
 Las mediciones de los mareógrafos muestran que el actual aumento global del nivel del mar comenzó a principios del siglo XX. Entre 1901 y 2018, el promedio mundial del nivel del mar aumentó entre 15 y 25 cm​: 5, A.1.7  Los datos más precisos recopilados de las mediciones de radar satelital revelan un aumento acelerado de 7.5 centímetros entre los años 1993 y 2017: 1554 para una tasa promedio de 31 mm por década. Esta aceleración se debe principalmente al cambio climático, que calienta (y por lo tanto expande) el océano y derrite las capas de hielo y los glaciares terrestres. Entre 1993 y 2018, la expansión térmica del agua contribuyó en un 42% al aumento del nivel del mar; el derretimiento de glaciares templados en un 21%; Groenlandia, 15%; y Antártida, 8%​: 1576 Los científicos del clima esperan que la tasa se acelere aún más durante el siglo XXI, y las últimas mediciones indican que el nivel del mar está aumentando en un 3.7 mm por año.
         <br><br>
 Ademas, cave mencionar la extinción masiva del Holoceno, también conocida como la sexta extinción masiva o la extinción del Antropoceno es el evento de extinción masiva en el actual período Holoceno.
-        <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Endangered_arctic_-_starving_polar_bear.jpg/250px-Endangered_arctic_-_starving_polar_bear.jpg" alt="Sopa de Teclado" width="500px">
+        <br><br>
+            <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Endangered_arctic_-_starving_polar_bear.jpg/250px-Endangered_arctic_-_starving_polar_bear.jpg>
         <br><br>
 Comprende la notoria desaparición de mamíferos grandes, conocidos como megafauna, cerca del final de la última glaciación entre nueve mil y trece mil años atrás, y es parte del evento de extinción del Cuaternario tardío, ya que comenzaron en Oceanía y Eurasia hace cuenta mil años, casi cuarenta mil años antes de que empezara el Holoceno.
         <br><br>
@@ -75,6 +76,7 @@ Se ha investigado como una posible respuesta al calentamiento global, por ejempl
 </body>
 
 </html>
+
 
 
 
