--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Las mediciones de los mareógrafos muestran que el actual aumento global del niv
         <br><br>
 Ademas, cave mencionar la extinción masiva del Holoceno, también conocida como la sexta extinción masiva o la extinción del Antropoceno es el evento de extinción masiva en el actual período Holoceno.
         <br><br>
-            <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Endangered_arctic_-_starving_polar_bear.jpg/250px-Endangered_arctic_-_starving_polar_bear.jpg>
+            <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Endangered_arctic_-_starving_polar_bear.jpg/250px-Endangered_arctic_-_starving_polar_bear.jpg">
         <br><br>
 Comprende la notoria desaparición de mamíferos grandes, conocidos como megafauna, cerca del final de la última glaciación entre nueve mil y trece mil años atrás, y es parte del evento de extinción del Cuaternario tardío, ya que comenzaron en Oceanía y Eurasia hace cuenta mil años, casi cuarenta mil años antes de que empezara el Holoceno.
         <br><br>
@@ -75,6 +75,7 @@ Se ha investigado como una posible respuesta al calentamiento global, por ejempl
 </body>
 
 </html>
+
 
 
 
