--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@ Los cambios climáticos han existido desde el inicio de la historia de la Tierra
         <br><br>
 En climatología, el calentamiento global es el aumento a largo plazo de la temperatura atmosférica media del sistema climático de la Tierra debido a la intensificación del efecto invernadero. Es un aspecto primordial del cambio climático actual, demostrado por la medición directa de la temperatura, el registro de temperaturas del último milenio y de varios efectos del calentamiento global ya visibles. La paleoclimatología muestra que ha habido variaciones históricas en el clima de la Tierra, pero las que están ocurriendo actualmente lo están haciendo a un ritmo sin precedentes que no puede ser explicado por causa natural alguna, por lo que, según la evidencia científica del calentamiento global, este drástico cambio solo puede deberse a la desmedida actividad humana de los últimos tiempos, la cual es una de las principales causas del calentamiento global.
         <br><br>
+    
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Change_in_Average_Temperature.svg/960px-Change_in_Average_Temperature.svg.png?20240615063215" width="250px">
+        <br><br>
 En 2013, el Quinto Informe de Evaluación (AR5) del Grupo Intergubernamental de Expertos sobre el Cambio Climático (IPCC) concluyó que «es extremadamente probable que la influencia humana ha sido la causa dominante del calentamiento observado desde la mitad del siglo XX». La mayor influencia humana ha sido la emisión de gases de efecto invernadero como el dióxido de carbono, metano y óxidos de nitrógeno. Las proyecciones de modelos climáticos resumidos en el AR5 indicaron que durante el presente siglo la temperatura superficial global subirá probablemente 0.3 a 1.7°C para su escenario de emisiones más bajas usando mitigación estricta y 2.6 a 4.8°C para las mayores.​ Estas conclusiones han sido respaldadas por las academias nacionales de ciencia de los principales países industrializados y no son disputadas por ninguna organización científica de prestigio nacional o internacional.
+        <br><br>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Greenhouse-gas-emission-scenarios-01.png/960px-Greenhouse-gas-emission-scenarios-01.png?20211004151349" width="250px">
         <br><br>
     <h2>Consecuencias</h2>
 El cambio climático futuro y los impactos asociados serán distintos en una región a otra alrededor del globo. Los efectos anticipados incluyen un aumento en las temperaturas globales, una subida en el nivel del mar, un cambio en los patrones de las precipitaciones y una expansión de los desiertos subtropicales. Se espera que el calentamiento sea mayor en la tierra que en los océanos y que el más acentuado suceda en el Ártico, con el continuo retroceso de los glaciares, el permafrost y la banquisa. Otros efectos probables incluyen fenómenos meteorológicos extremos más frecuentes, tales como olas de calor, sequías, lluvias torrenciales y fuertes nevadas; acidificación del océano y extinción de especies debido a regímenes de temperatura cambiantes. Entre sus impactos humanos significativos se incluye la amenaza a la seguridad alimentaria por la disminución del rendimiento de las cosechas y la pérdida de hábitat por inundación. Debido a que el sistema climático tiene una gran inercia y los gases de efecto invernadero continuarán en la atmósfera por largo tiempo, muchos de estos efectos persistirán no solo durante décadas o siglos, sino por decenas de miles de años.
@@ -30,11 +35,13 @@ El análisis de datos de eventos extremos desde 1960 hasta 2010 sugiere que las 
         <br><br>
 Hay un aumento notable en la actividad de los ciclones tropicales en el Norte del Océano Atlántico desde 1970, en correlación con el incremento de las temperaturas de las superficies oceánicas (véase Oscilación Multidecadal Atlántica​), pero la detección de las tendencias a largo plazo se ve complicada por la calidad de los registros de rutina anteriores a las observaciones por satélite. El sumario también señala que no existe una clara tendencia en el número anual de ciclones tropicales de todo el mundo. El calentamiento global también dará lugar muy probablemente a ciclones más intensos a nivel del promedio global de la Tierra. Según los modelos de previsión, a lo largo de este siglo en el porcentaje de ciclones más intensos se incrementará entre un 2% y 11% a nivel global. Aunque serán más fuertes, también se darán en menor cantidad. 
         <br><br>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Climate-tipping-points-es.svg/960px-Climate-tipping-points-es.svg.png?20230509092023" width="250px">
+        <br><br>
 Las mediciones de los mareógrafos muestran que el actual aumento global del nivel del mar comenzó a principios del siglo XX. Entre 1901 y 2018, el promedio mundial del nivel del mar aumentó entre 15 y 25 cm​: 5, A.1.7  Los datos más precisos recopilados de las mediciones de radar satelital revelan un aumento acelerado de 7.5 centímetros entre los años 1993 y 2017: 1554 para una tasa promedio de 31 mm por década. Esta aceleración se debe principalmente al cambio climático, que calienta (y por lo tanto expande) el océano y derrite las capas de hielo y los glaciares terrestres. Entre 1993 y 2018, la expansión térmica del agua contribuyó en un 42% al aumento del nivel del mar; el derretimiento de glaciares templados en un 21%; Groenlandia, 15%; y Antártida, 8%​: 1576 Los científicos del clima esperan que la tasa se acelere aún más durante el siglo XXI, y las últimas mediciones indican que el nivel del mar está aumentando en un 3.7 mm por año.
         <br><br>
 Ademas, cave mencionar la extinción masiva del Holoceno, también conocida como la sexta extinción masiva o la extinción del Antropoceno es el evento de extinción masiva en el actual período Holoceno.
         <br><br>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Endangered_arctic_-_starving_polar_bear.jpg/250px-Endangered_arctic_-_starving_polar_bear.jpg">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Endangered_arctic_-_starving_polar_bear.jpg/960px-Endangered_arctic_-_starving_polar_bear.jpg?20161103082642" width="250px">
         <br><br>
 Comprende la notoria desaparición de mamíferos grandes, conocidos como megafauna, cerca del final de la última glaciación entre nueve mil y trece mil años atrás, y es parte del evento de extinción del Cuaternario tardío, ya que comenzaron en Oceanía y Eurasia hace cuenta mil años, casi cuarenta mil años antes de que empezara el Holoceno.
         <br><br>
@@ -49,6 +56,8 @@ Hay dos grandes tipos de respuestas frente al calentamiento global: las relacion
         <br><br>
 La mitigación del cambio climático es el conjunto de acciones destinadas a disminuir la intensidad del forzamiento radiativo con el fin de reducir los efectos potenciales del calentamiento global. En general, la mitigación supone la reducción de las concentraciones de gases de efecto invernadero, ya sea mediante la reducción de sus fuentes o aumentando la capacidad de los sumideros de carbono para absorber los GEI de la atmósfera.
         <br><br>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/Limiting_global_warming_to_2_degrees_Celsius_-_options_to_reduce_greenhouse_gas_emissions_%28PBL%29-es.png/960px-Limiting_global_warming_to_2_degrees_Celsius_-_options_to_reduce_greenhouse_gas_emissions_%28PBL%29-es.png?20160930083918" width="250px">
+        <br><br>
 Pese a los tratados, acuerdos, subsidios e impuestos en vigencia, la primavera boreal de 2023 marcó el cuarto mayor incremento anual en emisiones de anhídrido carbónico desde que las mediciones iniciarion en 1958.
         <br><br>
 Existe un gran potencial para reducciones futuras de las emisiones mediante una combinación de actividades, tales como la conservación de energía y el aumento de la eficiencia energética; el uso de tecnologías de energía baja en carbono, como la energía renovable, la energía nuclear y la captura y almacenamiento de carbono; y la mejora de los sumideros de carbono a través de, por ejemplo, la reforestación y la prevención de la deforestación. Un informe de 2015 por Citibank concluyó que la transición a una economía baja en carbono produciría un rendimiento positivo a las inversiones.
@@ -58,6 +67,8 @@ Las tendencias a corto y largo plazo en el sistema energético global no son com
 La mitigación se distingue de la adaptación, que implica actuar para minimizar los efectos del calentamiento global.
         <br><br>
 La adaptación al cambio climático es la respuesta al calentamiento global que busca reducir la vulnerabilidad de los sistemas sociales y biológicos a los efectos del cambio climático. Esta puede ser planificada como parte de las políticas públicas, ya sea en reacción o anticipación al cambio climático, o espontánea, es decir, sin intervención del gobierno. La adaptación planificada ya se está produciendo de forma limitada. Las barreras, límites y costos de la adaptación futura no se comprenden completamente. La adaptación al cambio climático probablemente costará miles de millones de dólares anuales durante las próximas décadas, aunque se desconoce la cantidad real de dinero que se necesita.
+        <br><br>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Climate_Smart_Village_Mango_Field_in_Myanmar.jpg/960px-Climate_Smart_Village_Mango_Field_in_Myanmar.jpg?20200430054244" width="250px">
         <br><br>
 Un concepto relacionado con la adaptación es la mitigación del cambio climático, que consiste en reducir las emisiones de gases de efecto invernadero (GEI) y aumentar la eliminación de estos gases de la atmósfera (a través de los sumideros de carbono). Sin embargo, incluso las reducciones más eficaces en las emisiones no evitan más impactos del cambio climático, por lo que la necesidad de adaptación es inevitable. Incluso si las emisiones se estabilizan relativamente pronto, el cambio climático y sus efectos durarán muchos años, y la adaptación será igualmente necesaria. Si el calentamiento global no se mitiga entonces, a largo plazo, probablemente excederá la capacidad de adaptación de los sistemas humanos, naturales y gestionados. Para los sistemas humanos, los costos económicos y sociales del cambio climático no mitigado serían muy elevados.
         <br><br>
@@ -74,6 +85,7 @@ Se ha investigado como una posible respuesta al calentamiento global, por ejempl
 </body>
 
 </html>
+
 
 
 
