--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@ Por ultimo esta la geoingeniería, ingeniería climática o intervención climá
         <br><br>
 Se ha investigado como una posible respuesta al calentamiento global, por ejemplo, por la NASA y la Royal Society. Las técnicas bajo investigación generalmente pertenecen a las categorías de gestión de la radiación solar y reducción del dióxido de carbono, aunque se han sugerido varias otras estrategias. Un estudio de 2014 investigó los métodos de ingeniería climática más comunes y llegó a la conclusión de que o son ineficaces o tienen efectos secundarios potencialmente graves y no se pueden detener sin causar un rápido cambio climático.
         <br><br>
+        <a href="./index.html">Regresar al principio.</a>
 </body>
 
 </html>
+
 
 
 
